--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,81 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+ion-button{
+    height: 3em !important;
+    text-transform: capitalize;
+}
+
+.container{
+    --padding-start: 1em;
+    padding-left: 1em;
+    --padding-end: 1em;
+    padding-right: 1em;
+}
+
+.text-danger{
+    color: var(--ion-color-danger);
+}
+
+.mt-1{
+    margin-top: 1em;
+}
+
+.mt-2{
+    margin-top: 2em;
+}
+
+.mr-1{
+    margin-right: 1em;
+}
+
+.mr-2{
+    margin-right: 2em;
+}
+
+.mb-1{
+    margin-bottom: 1em;
+}
+
+.mb-2{
+    margin-bottom: 2em;
+}
+
+.ml-1{
+    margin-left: 1em;
+}
+
+.ml-2{
+    margin-left: 2em;
+}
+
+.p-1{
+    padding: 1em;
+}
+
+.pt-1{
+    padding-top: 1em;
+    --padding-top: 1em;
+}
+.pr-1{
+    padding-right: 1em;
+    --padding-right: 1em;
+}
+.pb-1{
+    padding-bottom: 1em;
+    --padding-bottom: 1em;
+}
+.pl-1{
+    padding-left: 1em;
+    --padding-left: 1em;
+}
+
+.auth-container {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    flex-direction: column;
+    // --background: url('./assets/imgs/login.jpg') 0 0/100% 100% no-repeat;
+}
