--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content class="container auth-container">
   <div class="title-container">
-    <ion-label>FireChat</ion-label>
+    <ion-label>SimpleChat</ion-label>
   </div>
 
   <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
