--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<app-header title="SimpleChat"></app-header>
+<app-header title="Izzy Chat"></app-header>
 
 <ion-content>
     <div class="container">
